--- a/BambooTray.App/packages.config
+++ b/BambooTray.App/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Appccelerate.EventBroker" version="3.15.0" targetFramework="net452" />
+  <package id="Appccelerate.Fundamentals" version="2.8.0" targetFramework="net452" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
+  <package id="Ninject.Extensions.AppccelerateEventBroker" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.Extensions.ContextPreservation" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net452" />
 </packages>
