--- a/BambooTray.App/BambooTray.App.csproj
+++ b/BambooTray.App/BambooTray.App.csproj
@@ -85,6 +85,8 @@
     </ApplicationDefinition>
     <Compile Include="AppKernel.cs" />
     <Compile Include="AppModule.cs" />
+    <Compile Include="Bamboo\Resources\Link.cs" />
+    <Compile Include="Bamboo\Resources\Plans.cs" />
     <Compile Include="EventBroker\BambooPlanPublisher.cs" />
     <Compile Include="EventBroker\IBambooPlanPublisher.cs" />
     <Compile Include="EventBroker\PlanEventArgs.cs" />
