Added balloon tips, fixed ui not being updated on changes

--- a/BambooTray.App/BambooTray.App.csproj
+++ b/BambooTray.App/BambooTray.App.csproj
@@ -65,6 +65,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -170,6 +171,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\bamboo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\icon-build-failed.ico" />
+    <Resource Include="Images\icon-build-successful.ico" />
+    <Resource Include="Images\icon-build-unknown.ico" />
+    <Resource Include="Images\icon-building-06.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
