Update icon depending on build state

--- a/BambooTray.App/BambooTray.App.csproj
+++ b/BambooTray.App/BambooTray.App.csproj
@@ -178,6 +178,10 @@
     <Resource Include="Images\icon-build-unknown.ico" />
     <Resource Include="Images\icon-building-06.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\bamboo-failed.ico" />
+    <Resource Include="Images\bamboo-successful.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
