--- a/BambooTray.App/BambooTray.App.csproj
+++ b/BambooTray.App/BambooTray.App.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -88,6 +89,12 @@
     <Compile Include="AppModule.cs" />
     <Compile Include="Bamboo\Resources\Progress.cs" />
     <Compile Include="Bamboo\Resources\Results.cs" />
+    <Compile Include="IMainViewModel.cs" />
+    <Compile Include="MainViewModel.cs" />
+    <Compile Include="PopupView.xaml.cs">
+      <DependentUpon>PopupView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PopupViewModelDesignData.cs" />
     <Compile Include="SessionManagement\Authenticator.cs" />
     <Compile Include="Bamboo\Resources\Link.cs" />
     <Compile Include="Bamboo\Resources\Plans.cs" />
@@ -122,7 +129,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PopupView.xaml">
+    <Page Include="MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -135,10 +142,14 @@
     <Compile Include="Bamboo\Resources\Result.cs" />
     <Compile Include="Bamboo\IBambooClient.cs" />
     <Compile Include="Bamboo\IBambooPlanUpdater.cs" />
-    <Compile Include="PopupView.xaml.cs">
-      <DependentUpon>PopupView.xaml</DependentUpon>
+    <Compile Include="MainView.xaml.cs">
+      <DependentUpon>MainView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PopupView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PopupViewModel.cs" />
